Fix: detail page/reply form, align reply button centerly with textarea on tablet screen (#52)

--- a/src/pages/feedbacks/DetailPage/components/CommentList/replyForm.style.scss
+++ b/src/pages/feedbacks/DetailPage/components/CommentList/replyForm.style.scss
@@ -15,6 +15,10 @@
     min-width: 106px;
   }
 
+  &__textarea {
+    margin-bottom: 0 !important;
+  }
+
   textarea {
     min-height: 80px;
     flex-grow: 1;
